# Globalizer

./: .gitmodules  CMakeLists.txt  README.md
PYGlobalizer/: PYGlobalizer.cpp  PYProblem.cpp  PYProblem.h  PYProblem.py  instruction.txt
cmake/: globalizer_lib.cmake
examples/: ConstraintsIterationMain.cpp  GCGenGKLSMain.cpp  GCGenMain.cpp  GCGenMain2.cpp  HDOptimizationMain.cpp  Main.cpp  NoConstraintsIterationMain.cpp  SampleMain.cpp  SimpleMain.cpp  SimpleMain_orig.cpp  create_test_problem.py  direct_problem_solver.cpp  direct_problem_solver.h  file_manager.cpp  file_manager.h  test_problem_2.py
globalizer/evolvent/include/: EvolventFactory.h  EvolventInterface.h  TLinearEvolvent.h  TNoninjectiveEvolvent.h  TRotatedEvolvent.h  TShiftedEvolvent.h  TSmoothEvolvent.h
globalizer/evolvent/src/: EvolventFactory.cpp  TLinearEvolvent.cpp  TNoninjectiveEvolvent.cpp  TRotatedEvolvent.cpp  TShiftedEvolvent.cpp  (+1 more)
globalizer/include/: Common.h  GlobProcess.h  Globalizer.h  HDSolver.h  IterationOutput.h  SolutionResult.h  Solver.h  SolverInterface.h  SolverRSA.hpp
globalizer/src/: Common.cpp  GlobProcess.cpp  Globalizer.cpp  HDSolver.cpp  Solver.cpp  SolverRSA.cpp
integration_tests/: CMakeLists.txt
integration_tests/references/: tests.json
integration_tests/src/: main.cpp
lib/mpir/: lib_mpir_cxx.vcxproj.FileListAbsolute.txt
lib/plotters/: file_readers.py  interface_cpp.py  painters.py  plotters.py  start_cpp.py  start_py.py
lib/scripts/: LogParser_AllDir_NumberOfTrials.pl
tests/src/: test_data.cpp  test_method.cpp  test_parameter_properties.cpp  test_task.cpp
(+54 files in other folders)
